Adjust animated message cards positioning to avoid overlap with fixed navigation bar

--- a/styles.css
+++ b/styles.css
@@ -240,25 +240,25 @@ body {
 }
 
 .animated-message.left-message {
-    top: 0;
+    top: 80px;
     right: 250px;
     animation-delay: 2s;
 }
 
 .animated-message.right-message {
-    top: 30px;
+    top: 110px;
     right: 50px;
     animation-delay: 2.5s;
 }
 
 .animated-message.bottom-left-message {
-    top: 450px;
+    top: 530px;
     right: 300px;
     animation-delay: 0.5s;
 }
 
 .animated-message.bottom-right-message {
-    top: 470px;
+    top: 550px;
     right: 50px;
     animation-delay: 1s;
 }
